User & Guitar controllers implemented.