@@ -2,7 +2,7 @@ package by.smirnov.guitarshopproject.controller;
 
 import by.smirnov.guitarshopproject.dto.GuitarDTO;
 import by.smirnov.guitarshopproject.model.Guitar;
-import by.smirnov.guitarshopproject.repository.guitar.HibernateGuitarRepo;
+import by.smirnov.guitarshopproject.service.GuitarService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.*;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static by.smirnov.guitarshopproject.controller.ControllerConstants.*;
 
@@ -20,13 +19,13 @@ import static by.smirnov.guitarshopproject.controller.ControllerConstants.*;
 @RequiredArgsConstructor
 @RequestMapping(MAPPING_REST_GUITARS)
 public class GuitarRestController {
-    private final HibernateGuitarRepo repository;
+    private final GuitarService service;
 
     private final ModelMapper modelMapper;
 
     @GetMapping()
     public ResponseEntity<?> index() {
-        List<GuitarDTO> guitars =  repository.findAll().stream().map(this::convertToDTO).collect(Collectors.toList());
+        List<GuitarDTO> guitars =  service.findAll().stream().map(this::convertToDTO).toList();
         return guitars != null &&  !guitars.isEmpty()
                 ? new ResponseEntity<>(Collections.singletonMap("guitars", guitars), HttpStatus.OK)
                 : new ResponseEntity<>(HttpStatus.NOT_FOUND);
@@ -34,7 +33,7 @@ public class GuitarRestController {
 
     @GetMapping(MAPPING_ID)
     public ResponseEntity<GuitarDTO> show(@PathVariable(ID) long id) {
-        GuitarDTO guitarDTO = convertToDTO(repository.findById(id));
+        GuitarDTO guitarDTO = convertToDTO(service.findById(id));
         return guitarDTO != null
                 ? new ResponseEntity<>(guitarDTO, HttpStatus.OK)
                 : new ResponseEntity<>(HttpStatus.NOT_FOUND);
@@ -43,7 +42,7 @@ public class GuitarRestController {
     //insert validation
     @PostMapping()
     public ResponseEntity<?> create(@RequestBody GuitarDTO guitarDTO) {
-        repository.create(convertToEntity(guitarDTO));
+        service.create(convertToEntity(guitarDTO));
         return new ResponseEntity<>(HttpStatus.CREATED);
     }
 
@@ -51,7 +50,7 @@ public class GuitarRestController {
     @PatchMapping(MAPPING_ID)
     public ResponseEntity<?> update(@PathVariable(name = ID) int id, @RequestBody GuitarDTO guitarDTO) {
         Guitar guitar = convertToEntity(guitarDTO);
-        final boolean updated = Objects.nonNull(repository.update(guitar));
+        final boolean updated = Objects.nonNull(service.update(guitar));
         return updated
                 ? new ResponseEntity<>(HttpStatus.OK)
                 : new ResponseEntity<>(HttpStatus.NOT_MODIFIED);
@@ -59,9 +58,9 @@ public class GuitarRestController {
 
     @DeleteMapping(MAPPING_ID)
     public ResponseEntity<?> delete(@PathVariable(ID) long id) {
-        Guitar guitar = repository.findById(id);
+        Guitar guitar = service.findById(id);
         if (!guitar.isDeleted()) {
-            repository.delete(id);
+            service.delete(id);
             return new ResponseEntity<>(HttpStatus.OK);
         }
         return new ResponseEntity<>(HttpStatus.NOT_MODIFIED);
@@ -70,7 +69,7 @@ public class GuitarRestController {
     @GetMapping("/stats")
     public ResponseEntity<?> getAveragePrice() {
         return new ResponseEntity<>
-                (Collections.singletonMap("avg", String.format("%.2f", repository.showAverageGuitarPrice()) + "$"),
+                (Collections.singletonMap("avg", String.format("%.2f", service.showAverageGuitarPrice()) + "$"),
                         HttpStatus.OK);
     }
 
