@@ -2,14 +2,12 @@ package by.smirnov.guitarshopproject.controller;
 
 import by.smirnov.guitarshopproject.dto.UserDTO;
 import by.smirnov.guitarshopproject.model.User;
-import by.smirnov.guitarshopproject.repository.user.HibernateUserRepo;
+import by.smirnov.guitarshopproject.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.stream.Collectors;
 
 import static by.smirnov.guitarshopproject.controller.ControllerConstants.*;
 
@@ -17,27 +15,27 @@ import static by.smirnov.guitarshopproject.controller.ControllerConstants.*;
 @RequiredArgsConstructor
 @RequestMapping(MAPPING_USERS)
 public class UserController {
-    private final HibernateUserRepo repository;
+    private final UserService service;
 
     private final ModelMapper modelMapper;
 
     @GetMapping()
     public String index(Model model) {
         model.addAttribute(USERS,
-                repository.findAll().stream().map(this::convertToDTO).collect(Collectors.toList()));
+                service.findAll().stream().map(this::convertToDTO).toList());
         return "users/index";
     }
 
     @GetMapping("/deleted")
     public String showDeleted(Model model) {
         model.addAttribute("notUsers",
-                repository.showDeletedUsers().stream().map(this::convertToDTO).collect(Collectors.toList()));
+                service.showDeletedUsers().stream().map(this::convertToDTO).toList());
         return "users/deleted";
     }
 
     @GetMapping(MAPPING_ID)
     public String show(@PathVariable(ID) long id, Model model) {
-        model.addAttribute("user", convertToDTO(repository.findById(id)));
+        model.addAttribute("user", convertToDTO(service.findById(id)));
         return "users/show";
     }
 
@@ -49,13 +47,13 @@ public class UserController {
     //insert validation
     @PostMapping()
     public String create(@ModelAttribute(USER) UserDTO userDTO) {
-        repository.create(convertToEntity(userDTO));
+        service.create(convertToEntity(userDTO));
         return REDIRECT_USERS;
     }
 
     @GetMapping(MAPPING_EDIT)
     public String edit(Model model, @PathVariable(ID) long id) {
-        model.addAttribute(USER, repository.findById(id));
+        model.addAttribute(USER, service.findById(id));
         return "users/edit";
     }
 
@@ -63,13 +61,13 @@ public class UserController {
     @PatchMapping(MAPPING_ID)
     public String update(@ModelAttribute(USER) UserDTO userDTO,
                          @PathVariable(ID) long id) {
-        repository.update(convertToEntity(userDTO));
+        service.update(convertToEntity(userDTO));
         return REDIRECT_USERS;
     }
 
     @DeleteMapping(MAPPING_ID)
     public String delete(@PathVariable(ID) long id) {
-        repository.delete(id);
+        service.delete(id);
         return REDIRECT_USERS;
     }
 
