@@ -2,7 +2,7 @@ package by.smirnov.guitarshopproject.controller;
 
 import by.smirnov.guitarshopproject.dto.UserDTO;
 import by.smirnov.guitarshopproject.model.User;
-import by.smirnov.guitarshopproject.repository.user.HibernateUserRepo;
+import by.smirnov.guitarshopproject.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.*;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static by.smirnov.guitarshopproject.controller.ControllerConstants.*;
 
@@ -21,13 +20,13 @@ import static by.smirnov.guitarshopproject.controller.ControllerConstants.*;
 @RequestMapping(MAPPING_REST_USERS)
 public class UserRestController {
 
-    private final HibernateUserRepo repository;
+    private final UserService service;
 
     private final ModelMapper modelMapper;
 
     @GetMapping()
     public ResponseEntity<?> index() {
-        List<UserDTO> users = repository.findAll().stream().map(this::convertToDTO).collect(Collectors.toList());
+        List<UserDTO> users = service.findAll().stream().map(this::convertToDTO).toList();
         return users != null && !users.isEmpty()
                 ? new ResponseEntity<>(Collections.singletonMap(USERS, users), HttpStatus.OK)
                 : new ResponseEntity<>(HttpStatus.NOT_FOUND);
@@ -35,7 +34,7 @@ public class UserRestController {
 
     @GetMapping(MAPPING_ID)
     public ResponseEntity<UserDTO> show(@PathVariable(ID) long id) {
-        UserDTO userDTO = convertToDTO(repository.findById(id));
+        UserDTO userDTO = convertToDTO(service.findById(id));
         return userDTO != null
                 ? new ResponseEntity<>(userDTO, HttpStatus.OK)
                 : new ResponseEntity<>(HttpStatus.NOT_FOUND);
@@ -43,14 +42,14 @@ public class UserRestController {
 
     @PostMapping()
     public ResponseEntity<?> create(@RequestBody UserDTO userDTO) {
-        repository.create(convertToEntity(userDTO));
+        service.create(convertToEntity(userDTO));
         return new ResponseEntity<>(HttpStatus.CREATED);
     }
 
     @PatchMapping(MAPPING_ID)
     public ResponseEntity<?> update(@PathVariable(name = ID) int id, @RequestBody UserDTO userDTO) {
         User user = convertToEntity(userDTO);
-        final boolean updated = Objects.nonNull(repository.update(user));
+        final boolean updated = Objects.nonNull(service.update(user));
         return updated
                 ? new ResponseEntity<>(HttpStatus.OK)
                 : new ResponseEntity<>(HttpStatus.NOT_MODIFIED);
@@ -58,9 +57,9 @@ public class UserRestController {
 
     @DeleteMapping(MAPPING_ID)
     public ResponseEntity<?> delete(@PathVariable(ID) long id) {
-        User user = repository.findById(id);
+        User user = service.findById(id);
         if (!user.isDeleted()) {
-            repository.delete(id);
+            service.delete(id);
             return new ResponseEntity<>(HttpStatus.OK);
         }
         return new ResponseEntity<>(HttpStatus.NOT_MODIFIED);
